[gd_scene load_steps=7 format=3 uid="uid://djet8rvadt558"]

[ext_resource type="Script" path="res://Scripts/flour_meter.gd" id="1_ni48k"]
[ext_resource type="AudioStream" uid="uid://bxcvk1l84o64y" path="res://Assets/sounds/Record (online-voice-recorder.com)(2).mp3" id="2_fsg5g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05gaw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbq2x"]
bg_color = Color(0.918504, 0.892084, 0.847782, 1)
border_width_top = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fq5m"]
bg_color = Color(0.118581, 0.118581, 0.118581, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0.439216, 0.439216, 0.439216, 1)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kpa4d"]
bg_color = Color(0.890838, 0, 0.0417766, 1)

[node name="FlourMeter" type="ProgressBar"]
z_index = 1
offset_right = 268.0
offset_bottom = 4.0
theme_override_styles/background = SubResource("StyleBoxEmpty_05gaw")
theme_override_styles/fill = SubResource("StyleBoxFlat_jbq2x")
value = 69.0
show_percentage = false
script = ExtResource("1_ni48k")

[node name="Flourmeter" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_8fq5m")
theme_override_styles/fill = SubResource("StyleBoxFlat_kpa4d")
show_percentage = false

[node name="Timer2" type="Timer" parent="."]
wait_time = 16.0
one_shot = true

[node name="Timer1" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Mgh2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_fsg5g")

[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer1" to="." method="_on_timer_timeout"]
